service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "helloWorld"
  name: "helloworld"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 9095
    protocol: "TCP"
    targetPort: 9095
  selector:
    app: "helloWorld"
  type: "NodePort"
---
