gateway.yaml

apiVersion: "networking.istio.io/v1alpha3"
kind: "Gateway"
metadata:
  name: "hello-istio-gw"
spec:
  selector:
    istio: "ingressgateway"
  servers:
  - hosts:
    - "*"
    port:
      number: 80
      protocol: "HTTP"
      name: "http"
