virtualservice.yaml

apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "hello-istio-vs"
spec:
  hosts:
  - "*"
  gateways:
  - "hello-istio-gw"
  http:
  - route:
    - destination:
        host: "helloworld"
        port:
          number: 9095
